# tensorbit-run

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  OPS.md  TBM_FORMAT.md  TODO.md
include/tensorbit/run/: backend.h  backend.hpp  common.h  common.hpp  model.h  model.hpp  ops.h  ops.hpp  tensor.h  tensor.hpp
scripts/: setup.sh
src/: main.cpp  model.c  model.cpp  model_esp32.c
src/backend/cpu/: activation.c  attention.c  conv2d.c  embedding.c  linear.c  norm.c  registry.c  residual.c  rope.c  softmax.c
src/backend/cuda/: kernels.cu  registry.c
src/ops/: activation.c  attention.c  conv2d.c  embedding.c  linear.c  norm.c  residual.c  rope.c  softmax.c
tests/: test_all.sh  test_attention.c  test_integration.cpp  test_linear.c  test_norm.c  test_softmax.c  test_tbm.c
